<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"

        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_clear_favorite"
        android:icon="@drawable/ic_clear_favorite"
        android:title="@string/clear_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_clear_cache"
        android:icon="@drawable/ic_clear_cache"
        android:title="@string/clear_cache"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_load_test_data"
        android:title="@string/load_test_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />
</menu>