<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.cardview.widget.CardView
            android:id="@+id/poster"
            android:layout_width="130dp"
            android:layout_height="0dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/line_4"
            app:layout_constraintStart_toStartOf="@id/line_1"
            app:layout_constraintTop_toTopOf="@id/line_3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/sample_poster" />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/text_title"
            app:layout_constraintBottom_toTopOf="@id/text_view_year"
            app:layout_constraintEnd_toEndOf="@id/line_2"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toTopOf="@id/line_3"
            tools:text="@string/sample_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            app:layout_constraintBottom_toTopOf="@id/text_view_type"
            app:layout_constraintEnd_toEndOf="@id/line_2"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            tools:text="@string/sample_year" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="@id/line_4"
            app:layout_constraintEnd_toEndOf="@id/line_2"
            app:layout_constraintStart_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/text_view_year"
            tools:text="@string/sample_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
